--- a/po/uk.po
+++ b/po/uk.po
@@ -4,21 +4,21 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-12-01 09:56+0000\n"
 "PO-Revision-Date: 2016-11-17 12:51+0200\n"
-"Last-Translator: vovan43<vovan43@ex.ua>, sety <tim1065@mail.ru>, Irkoff <irkoff@gmail.com>\n"
-"Language-Team: gisclub.tv <http://gisclub.tv/>\n"
+"Last-Translator: \n"
+"Language-Team: kvinto\n"
 "Language: uk_UA\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 1.8.10\n"
+"X-Generator: Poedit 2.4.2\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : 2);\n"
 
 msgid ""
 "\n"
 "After pressing OK, please wait!"
 msgstr ""
 "\n"
-"Після натискання ОК, зачекайте!"
+"Після натиснення OK, зачекайте!"
 
 msgid ""
 "\n"
@@ -32,20 +32,21 @@ msgid ""
 "Press OK on your remote control to continue."
 msgstr ""
 "\n"
-"Натисніть ОК на пульті для продовження."
+"Натисніть OK для продовження."
 
-#, fuzzy
 msgid ""
 "\n"
 "Press OK or Exit to abort!"
-msgstr "Натисніть OK для пошуку."
+msgstr ""
+"\n"
+"Натисніть OK або Exit, щоб скасувати!"
 
 msgid ""
 "\n"
 "Recording in progress."
 msgstr ""
 "\n"
-"Запис триває."
+"Триває запис."
 
 #, python-format
 msgid ""
@@ -56,7 +57,7 @@ msgstr ""
 "Таймер '%s' відключений!"
 
 msgid " (0 - all networks)"
-msgstr "(0 - всі мережі)"
+msgstr " (0 - всі мережі)"
 
 #, python-format
 msgid " (Channel %s)"
@@ -64,10 +65,10 @@ msgstr " (Канал %s)"
 
 #, python-format
 msgid " (Partition %d)"
-msgstr "(Розділ% d)"
+msgstr " (Розділ %d)"
 
 msgid " (PiP)"
-msgstr " (PiP)"
+msgstr " (ПіП)"
 
 msgid " (Radio)"
 msgstr " (Радіо)"
@@ -76,23 +77,22 @@ msgid " (TV)"
 msgstr " (ТБ)"
 
 msgid " (disabled)"
-msgstr "(вимкнено)"
+msgstr " (вимкнуто)"
 
 msgid " (higher than any auto)"
-msgstr "(вище, ніж будь-який авто)"
+msgstr " (вище будь-якого авто)"
 
 msgid " (higher than rotor any auto)"
-msgstr "(вище, ніж ротор будь-якого авто)"
+msgstr " (вище будь-якого ротора авто)"
 
 msgid " (lower than any auto)"
-msgstr "(нижче будь-якого авто)"
+msgstr " (нижче будь-якого авто)"
 
 msgid " extensions."
 msgstr " доповнень."
 
-#, fuzzy
 msgid " min"
-msgstr "%d хв"
+msgstr " хв"
 
 msgid " ms"
 msgstr " мс"
@@ -101,31 +101,31 @@ msgid " packages selected."
 msgstr " пакетів вибрано."
 
 msgid " updates available."
-msgstr " доступних оновлень."
+msgstr " доступно оновлень."
 
 #, python-format
 msgid "%.0f GB"
-msgstr ""
+msgstr "%.0f ГБ"
 
 #, python-format
 msgid "%.0f MB"
-msgstr ""
+msgstr "%.0f МБ"
 
 #, python-format
 msgid "%.0f kB"
-msgstr ""
+msgstr "%.0f кБ"
 
 #, python-format
 msgid "%.1f° E"
-msgstr ""
+msgstr "%.1f° Сх"
 
 #, python-format
 msgid "%.1f° W"
-msgstr ""
+msgstr "%.1f° Зах"
 
 #, python-format
 msgid "%.2f GB"
-msgstr ""
+msgstr "%.2f ГБ"
 
 #, python-format
 msgid "%02d:%02d"
@@ -133,11 +133,11 @@ msgstr "%2d:%02d"
 
 #, python-format
 msgid "%03d MB"
-msgstr ""
+msgstr "%03d MБ"
 
 #, python-format
 msgid "%2.1f sec"
-msgstr ""
+msgstr "%2.1f сек"
 
 #. TRANSLATORS: short time representation hour:minute
 #, python-format
@@ -151,7 +151,7 @@ msgstr "%2d:%02d:%02d"
 
 #, python-format
 msgid "%3.01f dB"
-msgstr ""
+msgstr "%3.01f дБ"
 
 msgid "%A %d %B"
 msgstr "%A %d %B"
@@ -168,7 +168,6 @@ msgid "%H:%M"
 msgstr "%H:%M"
 
 #. TRANSLATORS: full date representations short dayname daynum monthname long year in strftime() format! See 'man strftime'
-#, fuzzy
 msgid "%a %e %B %Y"
 msgstr "%A %e %B %Y"
 
@@ -186,33 +185,33 @@ msgstr ""
 
 #, python-format
 msgid "%d GB"
-msgstr ""
+msgstr "%d ГБ"
 
 #, python-format
 msgid "%d MB"
-msgstr ""
+msgstr "%d МБ"
 
 #. TRANSLATORS: Intermediate scanning result, '%d' channel(s) have been found so far
 #, python-format
 msgid "%d channel found"
 msgid_plural "%d channels found"
-msgstr[0] "%d канал знайдений"
-msgstr[1] "%d канала знайдено"
+msgstr[0] "%d канал знайдено"
+msgstr[1] "%d канали знайдено"
 msgstr[2] "%d каналів знайдено"
 
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
-msgstr[0] "%d core"
-msgstr[1] "%d cores"
-msgstr[2] "%d cores"
+msgstr[0] "%d ядро"
+msgstr[1] "%d ядра"
+msgstr[2] "%d ядер"
 
 #, python-format
 msgid "%d day"
 msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d день"
+msgstr[1] "%d дні"
+msgstr[2] "%d днів"
 
 #, python-format
 msgid "%d file"
@@ -221,37 +220,37 @@ msgstr[0] "%d файл"
 msgstr[1] "%d файла"
 msgstr[2] "%d файлів"
 
-#, fuzzy, python-format
+#, python-format
 msgid "%d fps"
-msgstr "%d файл"
+msgstr "%d fps"
 
 #, python-format
 msgid "%d hour"
 msgid_plural "%d hours"
 msgstr[0] "%d година"
-msgstr[1] "%d годин"
+msgstr[1] "%d години"
 msgstr[2] "%d годин"
 
 #, python-format
 msgid "%d job is running in the background!"
 msgid_plural "%d jobs are running in the background!"
-msgstr[0] "%d процес запущений у фоновому режимі!"
+msgstr[0] "%d процес запущено у фоновому режимі!"
 msgstr[1] "%d процеси запущено у фоновому режимі!"
 msgstr[2] "%d процесів запущено у фоновому режимі!"
 
 #, python-format
 msgid "%d kB"
-msgstr ""
+msgstr "%d кБ"
 
 #, python-format
 msgid "%d kB/s"
-msgstr ""
+msgstr "%d кБ/с"
 
 #, python-format
 msgid "%d min"
 msgstr "%d хв"
 
-#, fuzzy, python-format
+#, python-format
 msgid "%d minute"
 msgid_plural "%d minutes"
 msgstr[0] "%d хвилина"
@@ -264,18 +263,18 @@ msgstr "%d хвилин"
 
 #, python-format
 msgid "%d ms"
-msgstr ""
+msgstr "%d мс"
 
 #, python-format
 msgid "%d pixel wide"
 msgid_plural "%d pixels wide"
-msgstr[0] "%d пікселів в ширину"
+msgstr[0] "%d піксель в ширину"
 msgstr[1] "%d пікселі в ширину"
-msgstr[2] "%d піксель в ширину"
+msgstr[2] "%d пікселів в ширину"
 
 #, python-format
 msgid "%d sec"
-msgstr ""
+msgstr "%d сек"
 
 #, python-format
 msgid "%d second"
@@ -294,8 +293,8 @@ msgstr[2] "%d директорій"
 #, python-format
 msgid "%d wireless network found!"
 msgid_plural "%d wireless networks found!"
-msgstr[0] "%d бездротова мережа знайдена!"
-msgstr[1] "%d бездротові мережі знайдені!"
+msgstr[0] "%d бездротову мережу знайдено!"
+msgstr[1] "%d бездротові мережі знайдено!"
 msgstr[2] "%d бездротових мереж знайдено!"
 
 msgid "%d-%m"
@@ -307,33 +306,35 @@ msgstr "%d.%02d. %02d:%02d"
 
 #, python-format
 msgid "%d.%03d GB"
-msgstr ""
+msgstr "%d.%03d ГБ"
 
 msgid "%d.%B %Y"
 msgstr "%d.%B %Y"
 
-#, fuzzy, python-format
+#, python-format
 msgid "%d.%d"
-msgstr "%d.%B %Y"
+msgstr "%d.%d"
 
-#, fuzzy, python-format
+#, python-format
 msgid "%d.%d.%d"
-msgstr "%d.%B %Y"
+msgstr "%d.%d.%d"
 
-#, fuzzy, python-format
+#, python-format
 msgid "%d:%02d"
-msgstr "%2d:%02d"
+msgstr "%d:%02d"
 
 #. TRANSLATORS: VFD hour:minute daynum short monthname in strftime() format! See 'man strftime'
 msgid "%k:%M %e/%m"
 msgstr "%k:%M %e/%m"
 
-#, fuzzy, python-format
 msgid ""
 "%s\n"
 "Do you still want to flash image\n"
 "%s?"
-msgstr "Ви хочете це зробити?"
+msgstr ""
+"%s\n"
+"Ви ще хочете записати імідж\n"
+"%s?"
 
 #, python-format
 msgid ""
@@ -341,10 +342,13 @@ msgid ""
 "Press ok for multiboot selection\n"
 "Press exit to close"
 msgstr ""
+"%s\n"
+"Натисніть OK для вибору іміджа\n"
+"Натисніть Exit, щоб вийти"
 
 #, python-format
 msgid "%s %d.%d"
-msgstr ""
+msgstr "%s %d.%d"
 
 #, python-format
 msgid "%s %s free disk space"
@@ -356,23 +360,23 @@ msgstr "%s (%s)\n"
 
 #, python-format
 msgid "%s imported from fallback tuner"
-msgstr ""
+msgstr "%s імпортовані з резервного тюнера"
 
 #. TRANSLATORS: The satellite with name '%s' is no longer used after a configuration change. The user is asked whether or not the satellite should be deleted.
 #, python-format
 msgid "%s is no longer used. Should it be deleted?"
-msgstr "%s більше не використовується. Чи повинен він бути видалений?"
+msgstr "%s більше не використовується. Видалити його?"
 
 #, python-format
 msgid "%s updated package available"
 msgid_plural "%s updated packages available"
-msgstr[0] "%s оновлений пакет доступний"
-msgstr[1] "%s оновлених пакета доступно"
-msgstr[2] "%s оновлених пакетів доступно"
+msgstr[0] "%s оновлення пакету доступно"
+msgstr[1] "%s оновлення пакетів доступно"
+msgstr[2] "%s оновлень пакетів доступно"
 
 #, fuzzy, python-format
 msgid "%s%% Autoinstalling %s"
-msgstr "Інсталяція"
+msgstr "%s%% Автовстановлення %s"
 
 #, python-format
 msgid "%s%d min"
@@ -386,45 +390,43 @@ msgstr "%s/%s: %s"
 msgid "%s:%s"
 msgstr "%s:%s"
 
-#, fuzzy
 msgid "(VU+ type)"
-msgstr "DVB тип"
+msgstr "(тип VU+)"
 
 msgid "(ZAP as PiP)"
-msgstr ""
+msgstr "(Переключити як PiP)"
 
 msgid "(ZAP)"
-msgstr "(Перейти)"
+msgstr "(Переключити)"
 
 #, python-format
 msgid "(activated +%d min)"
-msgstr "(активоване +%d хв)"
+msgstr "(активовано +%d хв)"
 
 msgid "(empty)"
-msgstr "(пусто)"
+msgstr "(відсутній)"
 
 msgid "(not activated)"
 msgstr "(не активовано)"
 
 msgid "(show optional DVD audio menu)"
-msgstr "(показати опції. DVD аудіо меню)"
+msgstr "(показати додаткове DVD аудіо меню)"
 
-#, fuzzy
 msgid "(unknown)"
-msgstr "невідомий"
+msgstr "(невідомий)"
 
 msgid "* Only available if more than one interface is active."
-msgstr "* Доступно якщо активно більше одного інтерфейсу."
+msgstr "* Доступно, якщо більше ніж один інтерфейс активний."
 
 msgid "-NO SERVICE\n"
-msgstr ""
+msgstr "-НЕМАЄ КАНАЛІВ\n"
 
 #, python-format
 msgid "-SERVICE ERROR:%d\n"
-msgstr ""
+msgstr "-ПОМИЛКА КАНАЛУ:%d\n"
 
 msgid "/s"
-msgstr "/с"
+msgstr "/сек"
 
 msgid "0"
 msgstr "0"
@@ -442,28 +444,28 @@ msgid "1.2"
 msgstr "1.2"
 
 msgid "10 MB/s"
-msgstr ""
+msgstr "10 MБ/с"
 
 msgid "100 MB/s"
-msgstr ""
+msgstr "100 MБ/с"
 
 msgid "10bit"
-msgstr ""
+msgstr "10біт"
 
 msgid "12V output"
-msgstr "12V вихід"
+msgstr "12В вихід"
 
 msgid "12bit"
-msgstr ""
+msgstr "12біт"
 
 msgid "13 V"
-msgstr "13 V"
+msgstr "13 В"
 
 msgid "16:10"
 msgstr "16:10"
 
 msgid "16:10 Letterbox"
-msgstr "16:10 Режим ящика"
+msgstr "16:10 Поштова скринька"
 
 msgid "16:10 PanScan"
 msgstr "16:10 Панорама"
@@ -472,7 +474,7 @@ msgid "16:9"
 msgstr "16:9"
 
 msgid "16:9 Letterbox"
-msgstr "16:9 Режим ящика"
+msgstr "16:9 Поштова скринька"
 
 msgid "16:9 always"
 msgstr "16:9 завжди"
@@ -481,13 +483,13 @@ msgid "16K"
 msgstr ""
 
 msgid "18 V"
-msgstr "18 V"
+msgstr "18 В"
 
 msgid "2"
 msgstr "2"
 
 msgid "20 MB/s"
-msgstr ""
+msgstr "20 MБ/с"
 
 msgid "23.976"
 msgstr "23.976"
@@ -508,16 +510,16 @@ msgid "30"
 msgstr "30"
 
 msgid "3D surround"
-msgstr ""
+msgstr "3D Звук"
 
 msgid "3D surround softlimiter"
-msgstr ""
+msgstr "Обмежувач об'ємного звуку 3D"
 
 msgid "3D surround speaker position"
-msgstr ""
+msgstr "Розташування динаміків 3D"
 
 msgid "3d mode"
-msgstr "Режим 3D"
+msgstr "3d режим"
 
 msgid "4"
 msgstr "4"
@@ -535,20 +537,19 @@ msgid "4:3"
 msgstr "4:3"
 
 msgid "4:3 Letterbox"
-msgstr "4:3 Режим ящика"
+msgstr "4:3 Поштова скринька"
 
 msgid "4:3 PanScan"
 msgstr "4:3 Панорама"
 
-#, fuzzy
 msgid "4K"
-msgstr "4"
+msgstr ""
 
 msgid "5"
 msgstr "5"
 
 msgid "50 MB/s"
-msgstr ""
+msgstr "50 МБ/с"
 
 msgid "6"
 msgstr "6"
@@ -559,12 +560,11 @@ msgstr "7"
 msgid "8"
 msgstr "8"
 
-#, fuzzy
 msgid "8K"
-msgstr "8"
+msgstr ""
 
 msgid "8bit"
-msgstr ""
+msgstr "8біт"
 
 msgid "9"
 msgstr "9"
@@ -9075,7 +9075,10 @@ msgstr ""
 
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
 msgid "TRANSLATOR_INFO"
-msgstr "vovan43 <vovan43@ex.ua>."
+msgstr ""
+"Переклад:  kvinto - 20.04.2021\n"
+"Сторінка:    https://gisclub.tv\n"
+"                  kvinto@rambler.ru"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "TS файл занадто великий для ISO9660 level 1!"
