--- a/po/ru.po
+++ b/po/ru.po
@@ -438,7 +438,7 @@ msgid "-SERVICE ERROR:%d\n"
 msgstr "-ОШИБКА СЕРВИСА:%d\n"
 
 msgid "/T"
-msgstr ""
+msgstr "/T"
 
 msgid "/s"
 msgstr "/с"
@@ -4235,7 +4235,7 @@ msgid "Hide player"
 msgstr "Скрыть проигрыватель"
 
 msgid "Hide sub-menu"
-msgstr ""
+msgstr "Скрыть доп. меню"
 
 msgid "Hide zap errors"
 msgstr "Спрятать ошибки при переключении каналов"
@@ -8119,9 +8119,8 @@ msgstr "Показать иконку статуса в списке видео"
 msgid "Show status icons in movielist"
 msgstr "Показать иконку статуса в списке видео"
 
-#, fuzzy
 msgid "Show sub-menu"
-msgstr "Показать колонки для названий событий"
+msgstr "Показать доп. меню"
 
 msgid "Show subservice selection"
 msgstr "Показать выбор субсервисов (SKY DE)"
